# eventflow

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/adr/: ADR-001-event-schema-design.md  ADR-002-aws-service-selection-rationale.md
docs/diagrams/: event-flow.md  sequence-diagram.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lambda/: inventory_handler.py  notification_handler.py  order_handler.py  payment_handler.py
infra/lib/: eventflow-stack.ts
src/eventflow/: bus.py
src/eventflow/events/: __init__.py  inventory_events.py  notification_events.py  order_events.py  payment_events.py
src/eventflow/services/: inventory_service.py  notification_service.py  order_service.py  payment_service.py
tests/: conftest.py  test_integration.py  test_placeholder.py
tests/test_events/: test_inventory_events.py  test_order_events.py  test_payment_events.py
tests/test_services/: test_inventory_service.py  test_notification_service.py  test_order_service.py  test_payment_service.py
